--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {background: rgba(112, 149, 157, 0.79);color:white;}
 /* Rubrik*/
 header{top:10px;width: 100%;height:100px;text-align: center;}
 header h1{font-size: 50px;color:rgb(255, 255, 255);}
-/* Grundboxen*/
+/* Mainboxen*/
 #container {display:inline-block;left:20%;right: 20%;position: absolute;align-content: center;}
 
 /* style för slidebar*/
